Edit models and ReadMe

--- a/models/FirstExample/FirstExample.ipynb
+++ b/models/FirstExample/FirstExample.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Primeiro Teste.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -21,13 +7,13 @@
         "colab_type": "text"
       },
       "source": [
-        "## Primeiro Teste do trabalho\n",
+        "## First Example\n",
         "\n",
-        "Usando imagens de pneumonia viral, bacteriana e pacientes com COVID-19 bem como o raio x de pessoas saúdaveis. Esse exemplo foi baseado no post do https://medium.com/analytics-vidhya/cnns-architectures-lenet-alexnet-vgg-googlenet-resnet-and-more-666091488df5 .\n",
+        "Using images of viral, bacterial pneumonia and patients with COVID-19 as well as x-rays of healthy people. This example was based on the post from [Medium](https://medium.com/analytics-vidhya/cnns-architectures-lenet-alexnet-vgg-googlenet-resnet-and-more-666091488df5).\n",
         "\n",
-        "Foi também para entender a técnica de transferência de conhecimento de redes treinadas. Logo após o teste foi verificado um desempenho muito a quem do desejável, logo passou-se para pesquisar sobre novas fontes de dados dessa vertente do tema desse trabalho.\n",
+        "It was also to understand the technique of transferring knowledge from trained networks. Shortly after the test, a performance was found to be very desirable, and soon we went on to research new sources of data on this aspect of the theme of this work.\n",
         "\n",
-        "Foi encontrado material COVID-NET, e explorado material com ela e posteriormente iremos trabalhar mais detalhadamente nesse material."
+        "It was found content about COVID-19, COVID-NET, and explored this content later we will work in more detail approaches always related to the data set of this work found."
       ]
     },
     {
@@ -419,5 +405,19 @@
         }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Primeiro Teste.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
