--- a/models/Covid_19_Standard_Notebook.ipynb
+++ b/models/Covid_19_Standard_Notebook.ipynb
@@ -5379,7 +5379,7 @@
         "  print(im.shape)\n",
         "  ax[i//3,i%3].imshow(im)\n",
         "  ax[i//3,i%3].axis('off')\n",
-        "f.suptitle('Pulmões Normais')\n",
+        "f.suptitle('Normal Lungs')\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -5437,7 +5437,7 @@
         "  im = cv2.imread('data/train/' + samples_normal.iloc[i])\n",
         "  ax[i//3,i%3].imshow(im)\n",
         "  ax[i//3,i%3].axis('off')\n",
-        "f.suptitle('Pulmões com Pneumonia')\n",
+        "f.suptitle('Lungs with Pneumonia')\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -5475,7 +5475,7 @@
         "  im = cv2.imread('data/train/' + samples_normal.iloc[i])\n",
         "  ax[i//3,i%3].imshow(im)\n",
         "  ax[i//3,i%3].axis('off')\n",
-        "f.suptitle('Pulmões com COVID-19')\n",
+        "f.suptitle('Lungs with COVID-19')\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -5509,7 +5509,7 @@
         "sns.set_style('whitegrid')\n",
         "plt.figure()\n",
         "plt.subplots(figsize=(10,5))\n",
-        "grafico=sns.barplot(x=['Treino-Normal','Treino-Pneumonia','Treino-Covid','Teste-Normal','Teste-Pneumonia','Teste-Covid'],\n",
+        "grafico=sns.barplot(x=['Train-Normal','Train-Pneumonia','Train-Covid','Test-Normal','Test-Pneumonia','Test-Covid'],\n",
         "                    y=[train_data[train_data['result'] == 'normal'].shape[0],\n",
         "                       train_data[train_data['result'] == 'pneumonia'].shape[0],\n",
         "                       train_data[train_data['result'] == 'COVID-19'].shape[0],\n",
